--- a/WinningWheel.csproj
+++ b/WinningWheel.csproj
@@ -57,6 +57,7 @@
     <Reference Include="System.EnterpriseServices" />
   </ItemGroup>
   <ItemGroup>
+    <Content Include="config.xml" />
     <Content Include="index.html" />
     <Content Include="jquery-1.9.1.min.js" />
     <Content Include="main.css" />
